--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "js-yaml": "^4.0.0"
+    "js-yaml": "^4.0.0",
+    "request": "^2.88.2"
   }
 }
